Bug 55107 Shifting bold/non-bold text on Mac in Chrome and Safari
Set all styles to use vertical-align:text-bottom;
Set Mac/Webkit style to pad/unpad the top by 1px depending on .Unread class being present.

http://bugzilla.zimbra.com/show_bug.cgi?id=55107

Copied from Perforce
 Change: 269203

--- a/WebRoot/css/common.css
+++ b/WebRoot/css/common.css
@@ -438,6 +438,21 @@ DIV.vSpace {
 	vertical-align:top;
 }
 
+.RowDouble TD.SubjectDoubleRow {
+    vertical-align:text-bottom;
+}
+
+#IFDEF MACINTOSH
+#IFDEF WEBKIT
+.RowDouble TD.SubjectDoubleRow {
+    padding-top:1px;
+} 
+.RowDouble .Unread TD.SubjectDoubleRow {
+    padding-top:0px;
+}
+#ENDIF
+#ENDIF
+
 /* list row styles (bgs & border) */
 
 .Row						{	@ListItemContainer-normal@			}
